# silk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
src/: decode.rs  encode.rs  error.rs  lib.rs
