[package]
name = "silk-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Rust bindings for silk"
keywords = ["silk", "pcm", "audio"]
repository = "https://github.com/lz1998/silk-rs"
homepage = "https://github.com/lz1998/silk-rs"
readme = "README.md"

[dependencies]
bytes = "1"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.53.1"
cc = "1.0"