[package]
name = "silk-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust bindings for silk"
keywords = ["silk", "pcm", "audio"]
repository = "https://github.com/lz1998/silk-rs"
homepage = "https://github.com/lz1998/silk-rs"
readme = "README.md"

[dependencies]
bytes = "1"
thiserror = "1"

[build-dependencies]
bindgen = "0.59"
cc = "1"
